--- a/bashbrew.yaml
+++ b/bashbrew.yaml
@@ -1,5 +1,5 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
+apiVersion: apps/v1
+kind:Deployment
 metadata:
   name: bashbrew
 spec:
@@ -17,7 +17,7 @@ spec:
         - containerPort: 8080
       
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Service
 metadata:
   name: bashbrew
